--- a/NetSettingBinder/NetSettingBinder.csproj
+++ b/NetSettingBinder/NetSettingBinder.csproj
@@ -32,13 +32,20 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ISettingChangedHandlerEntry.cs" />
+    <Compile Include="ReflectionTools.cs" />
+    <Compile Include="SettingChangedEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SettingBinder.cs" />
+    <Compile Include="SettingChangedEventHandler.cs" />
+    <Compile Include="SettingChangedHandlerEntry.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
