Moved all BindControl methods to a separate type part. Added option to not register click handler in BindControl  for ToolStripMenuItem

--- a/NetSettingBinder/NetSettingBinder.csproj
+++ b/NetSettingBinder/NetSettingBinder.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="ISettingChangedHandlerEntry.cs" />
     <Compile Include="ReflectionTools.cs" />
+    <Compile Include="SettingBinder.Forms.cs" />
     <Compile Include="SettingChangedEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SettingBinder.cs" />
