--- a/NetSettingBinder/NetSettingBinder.csproj
+++ b/NetSettingBinder/NetSettingBinder.csproj
@@ -44,6 +44,11 @@
     <Compile Include="SettingChangedEventHandler.cs" />
     <Compile Include="SettingChangedHandlerEntry.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Licence.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
